# texworks

./: .appveyor.yml  .gitattributes  .gitignore  .mailmap  .travis.yml  AdvancedTypesettingTools.md  Building.md  BuildingOnMacOSXHomebrew.md  BuildingOnWindows.md  BuildingOnWindowsMinGW.md  BuildingOnWindowsMinGWOld.md  CMakeLists.txt  CodeCompletion.md  CompletingEdit.cpp  CompletingEdit.h  Find.ui  FindDialog.cpp  FindDialog.h  GitArchiveInfo.txt  IdeasAndProjects.md  NEWS  PACKAGING  PDFDocks.cpp  PDFDocument.cpp  PDFDocument.h  PDFDocument.ui  PrefsDialog.cpp  PrefsDialog.h  PrefsDialog.ui  ProjectHome.md  QTeX.pro  QTeXApp.cpp  QTeXApp.h  QTeXUtils.cpp  QTeXUtils.h  QtPDF_es.qm  QtPDF_es.ts  README  README.md  Replace.ui  (+39 more)
CMake/packaging/: CMakeLists.txt  CPackProjectConfig.txt
modules/: CMakeLists.txt
modules/QtPDF/: .gitignore  CMakeLists.txt  Makefile  PDFDocumentView.cpp  PDFDocumentView.h  PDFView.cpp  PDFView.h  PDFViewer.cpp  PDFViewer.h  QtPDF.pro  QtPDF_icons.qrc  README.md  TODO.txt  icons.qrc  main.cpp  poppler_viewer.cpp
modules/scintilla/: cppcheck.suppress
modules/synctex/: CMakeLists.txt  synctex_parser.c  synctex_parser_utils.c  synctex_parser_utils.h  synctex_version.h
plugins-src/TWLuaPlugin/: CMakeLists.txt  LuaScript.cpp  LuaScript.h  LuaScriptInterface.cpp  LuaScriptInterface.h  TWLuaPlugin.cpp  TWLuaPlugin.h  TWLuaPlugin.pro
plugins-src/TWPythonPlugin/: CMakeLists.txt  PythonScript.cpp  PythonScript.h  PythonScriptInterface.cpp  PythonScriptInterface.h  TWPythonPlugin.cpp  TWPythonPlugin.h  TWPythonPlugin.pro
src/: BibTeXFile.cpp  BibTeXFile.h  BibTeXfile.cpp  BibTeXfile.h  CMakeLists.txt  CitationSelectDialog.cpp  CitationSelectDialog.h  ClickableLabel.cpp  ClickableLabel.h  ClosableTabWidget.cpp  ClosableTabWidget.h  CommandlineParser.cpp  CommandlineParser.h  CompletingEdit.cpp  CompletingEdit.h  CompletingEdit.ui  ConfigurableApp.cpp  ConfigurableApp.h  ConfirmDelete.cpp  ConfirmDelete.h  DefaultBinaryPathsWin.h  DefaultPrefs.h  Engine.cpp  Engine.h  Find.ui  FindDialog.cpp  FindDialog.h  HardWrapDialog.cpp  HardWrapDialog.h  HardWrapDialog.ui  InterProcessCommunicator.h  InterProcessCommunicatorDBus.cpp  InterProcessCommunicatorDummy.cpp  InterProcessCommunicatorWin.cpp  PDFDocks.cpp  PDFDocks.h  PDFDocument.cpp  PDFDocument.h  PDFDocument.ui  PDFDocumentWindow.cpp  (+56 more)
src/document/: Document.cpp  Document.h  SpellCheckManager.cpp  SpellCheckManager.h  SpellChecker.cpp  SpellChecker.h  TeXDocument.cpp  TeXDocument.h  TextDocument.cpp  TextDocument.h
src/scripting/: ECMAScript.cpp  ECMAScript.h  ECMAScriptInterface.cpp  ECMAScriptInterface.h  JSScript.cpp  JSScript.h  JSScriptInterface.cpp  JSScriptInterface.h  Script.cpp  Script.h  ScriptAPI.cpp  ScriptAPI.h  ScriptAPIInterface.h  ScriptLanguageInterface.h  ScriptObject.cpp  ScriptObject.h
src/ui/: CMakeLists.txt  ClickableLabel.cpp  ClickableLabel.h  ClosableTabWidget.cpp  ClosableTabWidget.h  ColorButton.cpp  ColorButton.h  ConsoleWidget.cpp  ConsoleWidget.h  LineNumberWidget.cpp  LineNumberWidget.h  ListSelectDialog.cpp  ListSelectDialog.h  RemoveAuxFilesDialog.cpp  RemoveAuxFilesDialog.h  ScreenCalibrationWidget.cpp  ScreenCalibrationWidget.h  SelWinAction.cpp  SelWinAction.h  Setup.cmake
src/utils/: CmdKeyFilter.cpp  CmdKeyFilter.h  CommandlineParser.cpp  CommandlineParser.h  CompilerWarnings.h  FileVersionDatabase.cpp  FileVersionDatabase.h  FullscreenManager.cpp  FullscreenManager.h  IniConfig.h  ResourcesLibrary.cpp  ResourcesLibrary.h  SystemCommand.cpp  SystemCommand.h  TextCodecs.cpp  TextCodecs.h  TypesetManager.cpp  TypesetManager.h  VersionInfo.cpp  VersionInfo.h  WindowManager.cpp  WindowManager.h
trunk/: CMakeLists.txt  CompletingEdit.cpp  CompletingEdit.h  Find.ui  FindDialog.cpp  FindDialog.h  PDFDocks.cpp  PDFDocks.h  PDFDocument.cpp  PDFDocument.h  PDFDocument.ui  PrefsDialog.cpp  PrefsDialog.h  PrefsDialog.ui  QTeX.pro  QTeXApp.cpp  QTeXApp.h  QTeXUtils.cpp  QTeXUtils.h  README  Replace.ui  TWApp.cpp  TWApp.h  TWUtils.cpp  TWUtils.h  TeXDocument.cpp  TeXDocument.h  TeXDocument.ui  TeXHighlighter.cpp  TeXHighlighter.h  TeXworks-doc.icns  TeXworks.icns  TeXworks.plist  TeXworks.plist.in  TeXworks.pro  TemplateDialog.cpp  TemplateDialog.h  ToolConfig.ui  getDefaultBinPaths.sh  getSvnRev.sh  (+9 more)
trunk/extra-setup-languages/: Turkish-3-5.1.11.isl
trunk/lib-patches/: README  poppler-fix-cmake-install-names-for-homebrew.patch
trunk/man/: texworks.1
trunk/poppler-patches/: README
trunk/res/: TeXworks.rc  mkresfilelist.sh  resfiles.qrc  resources.qrc
trunk/src/: CMakeLists.txt  ClickableLabel.cpp  ClosableTabWidget.h  CommandlineParser.cpp  CommandlineParser.h  CompletingEdit.cpp  CompletingEdit.h  ConfigurableApp.cpp  ConfigurableApp.h  ConfirmDelete.cpp  ConfirmDelete.h  ConfirmDelete.ui  DefaultBinaryPathsWin.h  DefaultPrefs.h  Find.ui  FindDialog.cpp  FindDialog.h  HardWrapDialog.cpp  HardWrapDialog.h  PDFDocks.cpp  PDFDocks.h  PDFDocument.cpp  PDFDocument.h  PDFDocument.ui  PrefsDialog.cpp  PrefsDialog.h  PrefsDialog.ui  Replace.ui  ResourcesDialog.cpp  ResourcesDialog.h  ResourcesDialog.ui  ScriptManager.cpp  ScriptManager.h  ScriptManager.ui  SvnRev.h  TWApp.cpp  TWApp.h  TWScript.cpp  TWScript.h  TWScriptAPI.cpp  (+25 more)
trunk/testcases/: sync.tex
trunk/trans/: README  TeXworks_af.qm  TeXworks_af.ts  TeXworks_ar.qm  TeXworks_ar.ts  TeXworks_ca.qm  TeXworks_ca.ts  TeXworks_cs.qm  TeXworks_cs.ts  TeXworks_de.qm  TeXworks_de.ts  TeXworks_es.qm  TeXworks_es.ts  TeXworks_fa.qm  TeXworks_fa.ts  TeXworks_fo.qm  TeXworks_fo.ts  TeXworks_fr.qm  TeXworks_fr.ts  TeXworks_it.qm  TeXworks_it.ts  TeXworks_ja.qm  TeXworks_ja.ts  TeXworks_ko.qm  (+16 more)
unit-tests/: BibTeXFile_test.cpp  BibTeXFile_test.h  CMakeLists.txt  Document_test.cpp  Document_test.h  FileVersionDatabase_test.cpp  FileVersionDatabase_test.h  LineNumberWidget_test.cpp  LineNumberWidget_test.h  LuaScripting_test.cpp  LuaScripting_test.h  MockScriptingAPI.h  Scripting_test.cpp  Scripting_test.h  SignalCounter.cpp  SignalCounter.h  UI_test.cpp  UI_test.h  Utils_test.cpp  Utils_test.h  byte_echo_test.cpp
(+1095 files in other folders)
